app/assets/stylesheets/style.css.scss
@import 'colors.css.scss';

@mixin prefix($property, $value, $prefixes: ()) {
  @each $prefix in $prefixes {
    #{'-' + $prefix + '-' + $property}: $value;
  }

  // Output standard non-prefixed declaration
  #{$property}: $value;
}


html {
  font-family: "brandon-grotesque", sans-serif;
  font-size: 62.5%;

  padding-bottom: 4rem;
  @media (min-width: 550px) {
    padding-bottom: 0;
  }
}


// Typography
h1,
h2,
h3,
h4 {
  color: $black;
  font-family: "brandon-grotesque", sans-serif;
  font-weight: 500;
}

h1 { font-size: 2.8rem; line-height: 1.35;}
h2 { font-size: 2.4rem; line-height: 1.4; margin: 0 0 1rem;}
h3 { font-size: 2rem; line-height: 1.5; margin: 0 0 1rem;}
h4, select { font-size: 1.6rem; line-height: 1.5;}

// Larger than phablet
@media (min-width: 550px) {
  h1 { font-size: 4rem; }
  h2 { font-size: 3rem; }
  h3 { font-size: 2rem; }
  h4 { font-size: 1.6rem; }
}

p,
input,
textarea,
em,
i,
li {
  color: $gray-80;
  font-family: 'vollkorn', serif;
  font-size: 1.8rem;
  line-height: 2.8rem;
}

p {
  margin: 2rem 0;
}

.dark-paragraph {
  color: $black;
}

em,
i {
  font-style: italic;
}

a {
  color: $black;
  line-height: 1.5;
  text-decoration: none;
}

.nav-link {
  font-size: 2rem;
}

.standard-link {
  font-size: 1.8rem;
}

h1 a,
h2 a,
h3 a,
h4 a,
p a,
.animated-underline {
  background-size: 0 100%;

  &:hover {
    background-image: linear-gradient(180deg, transparent 65%, $yellow 0);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    cursor: pointer;
    transition: background-size .4s ease;
  }
}

.inline-link {
  border-bottom: 2px solid $black;
}

.centered-text {
  text-align: center;
}

.centered-object {
  margin: auto;
}


// Spacing

.section {
  padding: 10rem 0;
}

.small-section {
  padding: 4rem 0 2rem;
}

.spacer {
  display: inline-block;
  height: 2rem;
  width: 100%;
}

.section-header {
  margin-bottom: 4rem;
}


// Buttons and Links

.button-primary,
.button-secondary {
  color: $black;
  display: table;
  font-family: "brandon-grotesque", sans-serif;
  font-size: 2rem;
  font-weight: 500;
  line-height: 1;
  text-decoration: none;
  width: auto;
}

.button-primary, {
  background: $yellow;
  margin: .7rem 0 0 .7rem;
  padding: .3rem 2rem 1.2rem 1rem;
  position: relative;

  &:before {
    background: transparent;
    border: 2px solid $black;
    cursor: pointer;
    content: '';
    display: block;
    height: calc(100% - 3px);
    left: -5px;
    position: absolute;
    top: -5px;
    width: calc(100% - 3px);
    transition: left .2s ease, top .2s ease;
  }

  transition: padding .2s ease, margin .2s ease;

  &:hover {
    padding: .75rem 1.5rem;
    margin: 0 3rem 0 .7rem;
    &:before {
      left: 0;
      top: 0;
    }
  }
}

.button-secondary {
  border: 2px solid $black;
  padding: 6px 15px;

  &:hover {
    background-color: $yellow;
    cursor: pointer;
    transition: background-color .4s ease;
  }
}

.button-inverse {
  border: 2px solid $white;
  color: $white;
  display: table;
  font-family: "brandon-grotesque", sans-serif;
  font-size: 2rem;
  font-weight: 500;
  line-height: 1;
  margin-top: 4rem;
  padding: 6px 15px;
  text-decoration: none;
  width: auto;

  &:hover {
    border: 2px solid $yellow;
    color: $yellow;
    transition: border .4s ease, color .4s ease;
  }
}

.actions {
  background: $yellow;
  display: table;
  margin: 4.7rem auto 2rem;
  padding: .3rem 2rem 1rem 1rem;
  position: relative;

  &:before {
    background: transparent;
    border: 2px solid $black;
    content: '';
    display: block;
    height: calc(100% - 3px);
    left: -5px;
    position: absolute;
    top: -5px;
    width: calc(100% - 3px);
    transition: left .2s ease, top .2s ease;
  }

  transition: padding .2s ease, margin .2s ease;

  &:hover {
    padding: .65rem 1.5rem;
    &:before {
      left: 0;
      top: 0;
    }
  }

  input[type="submit"] {
    background: $yellow;
    border: 0;
    border-radius: 0;
    color: $black;
    display: table;
    font-family: "brandon-grotesque", sans-serif;
    font-size: 2rem;
    font-weight: 500;
    height: auto;
    line-height: 1;
    padding: 0 0 .2rem;
    position: relative;
    text-decoration: none;
    width: auto;
  }
}

.submit {
  margin: 4rem auto;
}

.application-button {
  margin: 2rem 0 0 .6rem;
}


// Cards

.cards {
  background: $gray-20;
  display: inline-block;
  width: 100%;
}

.card {
  background: $white;
  box-shadow: 2rem 2rem 0 0 $blue-60;
  margin-bottom: 4rem;
  width: 100%;


  .content {
    padding: 5rem 4rem 4rem;
  }
}

.card,
.animate-in {
  @include prefix(transform, translate(0, 40px), forwards moz ms o webkit);
  opacity: 0;
}

.in-view {
  opacity: 1;
  transform: translateX(0) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1);
  transition: width .4s ease 0s, opacity 1200ms, transform 1800ms;
}

.dark {
  box-shadow: 2rem 2rem 0 0 $blue-100;
}

.divider {
  background-color: $blue-60;
  height: .5rem;
  width: 5rem;
}

.clamped-text {
  -webkit-box-orient: vertical;
  display: -webkit-box;
  overflow: hidden;
}

.one-lines,
.one-line {
  height: 2.8rem;
  -webkit-line-clamp: 1;
}

.two-lines {
  height: 5.6rem;
  -webkit-line-clamp: 2;
}

.four-lines {
  height: 11.2rem;
  -webkit-line-clamp: 4;
}

.floated-avatar {
  float: left;
  margin-right: 1rem;

  + h3 {
    position: relative;
    top: .6rem;
  }
}

.no-top-margin {
  margin-top: 0;
}

.no-bottom-margin {
  margin-bottom: 0;
}


// Form Elements

label {
  font-size: 2rem;
  line-height: 1.5;
  margin: 0 0 1rem;
}

input,
select {
  height: 5rem;
}

textarea {
  height: 15rem;
  max-width: 100%;
  min-width: 100%;
  padding-top: 1rem;
}

select {
  background: none;
}

input,
textarea,
select {
  @include prefix(box-sizing, border-box, forwards moz ms o webkit);
  border: 2px solid $black;
  border-radius: 5px;
  color: $black;
  padding-left: 1rem;
  width: 100%;

  &:focus {
    background-color: $blue-20;
    outline: none;
  }
}

#project_deadline_1i,
#project_deadline_2i,
#project_deadline_3i {
  width: 33%;
}

.field {
  margin-bottom: 2rem;
}

.profile-fields {
  .field {
    width: 100%;

    @media (min-width: 550px) {
      width: 48%;
      display: inline-block;
      float: left;

      &:nth-of-type(2n) {
        margin-left: 4%;
      }
    }
  }
}

.edit-profile {
  h3 {
    margin-bottom: 0;
  }

  p {
    margin-top: 0;
  }
}

.avatar-upload {
  align-items: center;
  border: 2px dashed $black;
  display: flex;
  padding: 1rem;
  border-radius: 5px;

  p {
    margin: 0 1rem;
    z-index: -1;
  }

  img {
    border-radius: 50%;
    height: 3.7rem;
    width: 3.7rem;
    z-index: -1;
  }
}

// Responsiveness

.large-screen-only {
  display: none;

  @media (min-width: 780px){
    display: inline-block;
  }
}

.larger-than-mobile-only {
  display: none;

  @media (min-width: 550px){
    display: inline-block;
  }
}

.mobile-only {
  display: visible;
  @media (min-width: 550px) {
    display: none;
  }
}

// Errors

#error_explanation {

  li {
    color: $red;
  }
  h2 {
    font-size: 2rem;
  }
}

.alert {
  color: $red;
  text-align: center;
}

// User Profile

.links {
  margin-bottom: 2rem;

  p {
    display: inline;
    margin: 1rem 1rem 0 0;
  }
}

.current-user-links {
  display: block;

  .edit-profile {
    display: inline-block;
    margin: 2rem 1rem 0 0;
  }
}

.user-profile-cta {
  background-color: $blue-20;
  padding: 2rem;

  p {
    color: $red;
  }
}

.project-card {
  .button-secondary {
    display: inline-block;
  }

  .role-status {
    display: inline-block;
    float: right;
    margin: .6rem 0 0;
  }
}

// Messaging

.message-input {
  margin-bottom: 2rem;
}

// Project Index

.invitation-cta {
  align-items: center;
  display: flex;
}

.invite-organizations {
  align-items: center;
  background-color: $blue-100;
  display: flex;

  h2 {
    color: $blue-20;
  }

  .button-secondary {
    border-color: $blue-20;
    color: $blue-20;
  }
}

.invitation {
  float: right;
  width: 100%;
}

.avatar {
  border-radius: 50%;
  height: 3.7rem;
  width: 3.7rem;
}

.project-applicant {
  display: flex;
  align-items: center;
}

// conversations

.conversation {
  align-items: top;
  border-bottom: 2px solid $gray-20;
  display: flex;
  flex-direction: column;
  padding: 1.5rem 2rem;

  .person,
  .conversation-details {
    display: block;
    float: left;
    width: 100%;
  }

  .conversation-details {
    margin-top: .7rem;
  }

  .conversation-project {
    color: $black;
    display: inline-block;
  }

  p {
    margin: 0;
  }

  .timestamp {
    display: none;
  }

  .last-message-preview {
    width: 100%;
  }

  &:last-child {
    border: 0;
  }

  @media (min-width: 780px) {
    padding: 1.5rem 4rem;
    flex-direction: row;

    .conversation-details {
      width: calc(100% - 25rem);
    }

    .person {
      width: 25rem;
    }

    .timestamp {
      display: inline-block;
      float: right;
      font-style: italic;
      text-align: right;
    }
  }
}

.back-arrow {
  float: left;
  margin-right: 1rem;
  position: relative;
  top: 1rem;
}

.personal-message {

  .message-heading {
    align-items: center;
    display: flex;

    h3,
    p {
      display: inline-block;
    }

    .timestamp {
      font-style: italic;
      margin: 0 0 0 1rem;
      position: relative;
      top: .3rem;
    }
  }

  .message-body {
    color: $black;
    display: block;
    margin: .5rem 0 2rem 4.7rem;
    width: calc(100% - 4rem);
  }
}

.message-reply {
  height: 6.6rem;
}


// for-organizations

.hero {
  align-items: center;
  background-image: image-url('hero-character.jpg');
  background-repeat: no-repeat;
  background-size: 100% auto;
  display: flex;
  height: 200px;
  width: 100%;
  @media (min-width: 550px) {
    height: 300px;
  }
  @media (min-width: 780px) {
    height: 70vh;
  }

  h2 {
    color: $white;
  }
}


// footer

.footer {
  h3 {
    text-align: center;
  }
}

